增加 RedissonCollectionCache 元素淘汰